scrollbar fix done

--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -30,7 +30,7 @@
     border-bottom: 2px solid white;
 }
 
-@media (max-width:600px) {
+@media (max-width:850px) {
     .header-container nav ul a {
         padding: 0px 0px;
         width: 66.666%;
